--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,7 @@
   }
 }
 
+/*
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,6 +23,19 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+  */
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align items to the left */
+  justify-content: flex-start; /* Adjust to start from top */
+  font-size: calc(10px + 2vmin);
+  color: white;
+  padding: 20px; /* Add some padding for spacing */
 }
 
 .App-link {
